--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>TP3</title>
   </head>
   <body>
@@ -29,33 +29,33 @@
         <div class="right">
           <div class="rating">
             <span class="stars">
-              <img src="/images/icon-star.svg" alt="">
-              <img src="/images/icon-star.svg" alt="">
-              <img src="/images/icon-star.svg" alt="">
-              <img src="/images/icon-star.svg" alt="">
-              <img src="/images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
             </span>
             <span class="rating-text">Rated 5 Stars in Reviews</span>
           </div>
 
           <div class="rating rating2">
             <span class="stars">
-              <img src="/images/icon-star.svg" alt="">
-              <img src="/images/icon-star.svg" alt="">
-              <img src="/images/icon-star.svg" alt="">
-              <img src="/images/icon-star.svg" alt="">
-              <img src="/images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
             </span>
             <span class="rating-text">Rated 5 Stars in Report Guru</span>
           </div>
-          
+
           <div class="rating rating3">
             <span class="stars">
-              <img src="/images/icon-star.svg" alt="">
-              <img src="/images/icon-star.svg" alt="">
-              <img src="/images/icon-star.svg" alt="">
-              <img src="/images/icon-star.svg" alt="">
-              <img src="/images/icon-star.svg" alt="">
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
+              <img src="./images/icon-star.svg" alt="" />
             </span>
             <span class="rating-text">Rated 5 Stars in BestTech</span>
           </div>
@@ -65,20 +65,22 @@
       <div class="lower">
         <div class="item">
           <div class="image">
-            <img src="/images/image-colton.jpg" alt="">
+            <img src="./images/image-colton.jpg" alt="" />
           </div>
           <div class="item-header">
             Colton Smith
             <div class="title">Verified Buyer</div>
           </div>
           <div class="item-body">
-            " We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time. Excellent! "
+            " We needed the same printed design as the one we had ordered a week
+            prior. Not only did they find the original order, but we also
+            received it in time. Excellent! "
           </div>
         </div>
 
         <div class="item item2">
           <div class="image">
-            <img src="/images/image-irene.jpg" alt="">
+            <img src="./images/image-irene.jpg" alt="" />
           </div>
           <div class="item-header">
             Irene Roberts
@@ -86,20 +88,23 @@
           </div>
           <div class="item-body">
             " Customer service is always excellent and very quick turn around.
-            Completely delighted with the simplicity of the purchase and the speed of delivery. "
+            Completely delighted with the simplicity of the purchase and the
+            speed of delivery. "
           </div>
         </div>
 
         <div class="item item3">
           <div class="image">
-            <img src="/images/image-anne.jpg" alt="">
+            <img src="./images/image-anne.jpg" alt="" />
           </div>
           <div class="item-header">
             Anne Wallace
             <div class="title">Verified Buyer</div>
           </div>
           <div class="item-body">
-            " Put an order with this company and can only praise them for the very high standard. Will definitely use them again and recommend them to everyone! "
+            " Put an order with this company and can only praise them for the
+            very high standard. Will definitely use them again and recommend
+            them to everyone! "
           </div>
         </div>
       </div>
